Fixed navbar and number of days display on mobile.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1045,9 +1045,7 @@ COLOR SCHEME
     .rocket-animation {
         bottom: 450px;
     }
-    #info{
-        display: none;
-    }
+
     .info-text-holder,.info-text-holder.info-closed{
         max-height: inherit;
         padding-top: 0px;
